--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
                                  <div class="arrow-up"></div>
                                  <ul>
                                      <li><a data-scroll href="#body">Inicio <i class="pe-7s-home"></i></a><span class="menu-effect"></span></li>
-                                     <li><a data-scroll href="#services">Proyectos <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
                                      <li><a data-scroll href="#portfolio">Portfolio <i class="pe-7s-glasses"></i></a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="#services">Proyectos <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
+                                     
                                  </ul>
                              </div>
                         </div>
@@ -82,9 +83,12 @@
                             <img src="assets/images/portfolio1.jpg" alt="img04">
                             <figcaption>
                                 <h3>Dani</h3>
-                                <span>Jacob Cummings</span>
-                                <a href="#" class="button" >Take a look</a>
                             </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-xs-12 item-space">
+                        <figure>
+                            <img src="#" alt="#">
                         </figure>
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12 item-space">
@@ -92,8 +96,6 @@
                             <img src="assets/images/portfolio2.jpg" alt="img01">
                             <figcaption>
                                 <h3>Feli</h3>
-                                <span>Jacob Cummings</span>
-                                <a href="#" class="button" >Take a look</a>
                             </figcaption>
                         </figure>
                     </div>
