--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
                 </div>
             </div><!-- container -->
         </section><!-- portfolio -->
+        
+        <section id="imagen" class="back">
+            <div class="container">
+                <figure>
+                    <img src="assets/images/background.jpg" alt="img-bg">
+                </figure>
+            </div>
+        </section>
 
         <!-- services section -->
 
