--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <section id="imagen" class="back">
             <div class="container">
                 <figure>
-                    <img src="assets/images/background.jpg" alt="img-bg">
+                    <img src="assets/images/bkground.jpg" alt="img-bg">
                 </figure>
             </div>
         </section>
