--- a/estaciones.html
+++ b/estaciones.html
@@ -40,9 +40,11 @@
                              <div class="dropdown-menu">
                                  <div class="arrow-up"></div>
                                  <ul>
-                                     <li><a data-scroll href="#body">Inicio <i class="pe-7s-home"></i></a><span class="menu-effect"></span></li>
-                                     <li><a data-scroll href="#portfolio">Portfolio <i class="pe-7s-glasses"></i></a><span class="menu-effect"></span></li>
-                                     <li><a data-scroll href="#services">Proyectos <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="https://santi-uriguen.github.io/pagina-feli/">Inicio <i class="pe-7s-home"></i></a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="#boga">Portfolio <i class="pe-7s-glasses"></i></a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="#bauhaus">Proyectos <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="#jaula">Proyectos <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="#pieza">Proyectos <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
                                      
                                  </ul>
                              </div>
@@ -55,44 +57,43 @@
         <section id="services" class="service-area">
             <div class="container">
                 <h2 class="block_title">FAD</h2>
-                <div class="row">
-                    <div class="col-md-3 col-sm-6">
-                        <div class="services">
-                            <div class="service-wrap">    
-                                <i class="pe-7s-science pe-dj pe-va"></i>
-                                <h3>BOGA</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
-                            </div>
-                        </div>
-                        
-                    </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="services">
-                            <div class="service-wrap">
-                                <i class="pe-7s-monitor pe-dj pe-va"></i>
-                                <h3>BAUHAUS</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
-                            </div>
+                <div class="col-md-3 col-sm-6" id="boga">
+                    <div class="services">
+                        <div class="service-wrap">    
+                            <i class="pe-7s-science pe-dj pe-va"></i>
+                            <h3>BOGA</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="services">
-                            <div class="service-wrap">
-                                <i class="pe-7s-edit pe-dj pe-va"></i>
-                                <h3>JAULA</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
-                            </div>
+
+                </div>
+                <div class="col-md-3 col-sm-6" id="bauhaus">
+                    <div class="services">
+                        <div class="service-wrap">
+                            <i class="pe-7s-monitor pe-dj pe-va"></i>
+                            <h3>BAUHAUS</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="services">
-                            <div class="service-wrap">
-                                <i class="pe-7s-config pe-dj pe-va"></i>
-                                <h3>PIEZA GRÁFICA</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
-                            </div>
+                </div>
+                <div class="col-md-3 col-sm-6" id="jaula">
+                    <div class="services">
+                        <div class="service-wrap">
+                            <i class="pe-7s-edit pe-dj pe-va"></i>
+                            <h3>JAULA</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
                         </div>
                     </div>
+                </div>
+                <div class="col-md-3 col-sm-6" id="pieza">
+                    <div class="services">
+                        <div class="service-wrap">
+                            <i class="pe-7s-config pe-dj pe-va"></i>
+                            <h3>PIEZA GRÁFICA</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
+                        </div>
+                    </div>
+                </div>
                 </div>
             </div>
         </section><!-- services -->
