--- a/estaciones.html
+++ b/estaciones.html
@@ -41,10 +41,10 @@
                                  <div class="arrow-up"></div>
                                  <ul>
                                      <li><a data-scroll href="https://santi-uriguen.github.io/pagina-feli/">Inicio <i class="pe-7s-home"></i></a><span class="menu-effect"></span></li>
-                                     <li><a data-scroll href="#boga">Portfolio <i class="pe-7s-glasses"></i></a><span class="menu-effect"></span></li>
-                                     <li><a data-scroll href="#bauhaus">Proyectos <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
-                                     <li><a data-scroll href="#jaula">Proyectos <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
-                                     <li><a data-scroll href="#pieza">Proyectos <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="#boga">Boga <i class="pe-7s-glasses"></i></a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="#bauhaus">Bauhaus <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="#jaula">Jaula <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="#pieza">Pieza Gráfica <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
                                      
                                  </ul>
                              </div>
