--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 <i class="pe-7s-science pe-dj pe-va"></i>
                                 <h3>BOGA</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
-                                <li><a href="https://santi-uriguen.github.io/pagina-feli/estaciones"></a></li>
+                                <a href="https://santi-uriguen.github.io/pagina-feli/estaciones"></a>
                             </div>
                         </div>
                         
@@ -134,6 +134,7 @@
                                 <i class="pe-7s-monitor pe-dj pe-va"></i>
                                 <h3>BAUHAUS</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
+                                <a href="https://santi-uriguen.github.io/pagina-feli/estaciones"></a>
                             </div>
                         </div>
                     </div>
@@ -143,7 +144,7 @@
                                 <i class="pe-7s-edit pe-dj pe-va"></i>
                                 <h3>JAULA</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
-                                <li><a href="https://santi-uriguen.github.io/pagina-feli/estaciones"></a></li>
+                                <a href="https://santi-uriguen.github.io/pagina-feli/estaciones"></a>
                             </div>
                         </div>
                     </div>
@@ -153,7 +154,7 @@
                                 <i class="pe-7s-config pe-dj pe-va"></i>
                                 <h3>PIEZA GRÁFICA</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
-                                <li><a href="https://santi-uriguen.github.io/pagina-feli/estaciones"></a></li>
+                                <a href="https://santi-uriguen.github.io/pagina-feli/estaciones"></a>
                             </div>
                         </div>
                     </div>
