--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                         <div class="services">
                             <div class="service-wrap">
                                 <i class="pe-7s-monitor pe-dj pe-va"></i>
-                                <h3>BAUHAUS</h3>
+                                <a href="https://santi-uriguen.github.io/pagina-feli/estaciones"><h3>BAUHAUS</h3></a>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
-                                <a href="https://santi-uriguen.github.io/pagina-feli/estaciones"></a>
+                                
                             </div>
                         </div>
                     </div>
