--- a/estaciones.html
+++ b/estaciones.html
@@ -32,7 +32,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-6">
-                        <div class="logo"><a data-scroll href="https://santi-uriguen.github.io/pagina-feli#portfolio" class="logo-text">Proceso Proyectual</a></div>
+                        <div class="logo"><a data-scroll href="https://santi-uriguen.github.io/pagina-feli" class="logo-text">Proceso Proyectual</a></div>
                     </div>
                     <div class="col-xs-6">
                         <div class="nav">
