--- a/estaciones.html
+++ b/estaciones.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="assets/css/owl.carousel.css">
         <link rel="stylesheet" href="assets/css/owl.theme.css">
         <link rel="stylesheet" href="assets/css/animate.css">
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/style-2.css">
 
         <!-- google fonts -->
         <link href='http://fonts.googleapis.com/css?family=Dosis:200,300,400,500|Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,100|Titillium+Web:400,200,300italic,300,200italic' rel='stylesheet' type='text/css'>
@@ -41,10 +41,10 @@
                                  <div class="arrow-up"></div>
                                  <ul>
                                      <li><a data-scroll href="https://santi-uriguen.github.io/pagina-feli/">Inicio <i class="pe-7s-home"></i></a><span class="menu-effect"></span></li>
-                                     <li><a data-scroll href="#boga">Boga <i class="pe-7s-glasses"></i></a><span class="menu-effect"></span></li>
-                                     <li><a data-scroll href="#bauhaus">Bauhaus <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
-                                     <li><a data-scroll href="#jaula">Jaula <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
-                                     <li><a data-scroll href="#pieza">Pieza Gráfica <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="#boga">Boga</a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="#bauhaus">Bauhaus</a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="#jaula">Jaula</a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="#pieza">Pieza Gráfica</a><span class="menu-effect"></span></li>
                                      
                                  </ul>
                              </div>
@@ -54,46 +54,49 @@
                 </div>
             </div>            
         </section>
+        
+        <!--estaciones-->
         <section id="services" class="service-area">
             <div class="container">
-                <h2 class="block_title">FAD</h2>
-                <div class="col-md-3 col-sm-6" id="boga">
-                    <div class="services">
-                        <div class="service-wrap">    
-                            <i class="pe-7s-science pe-dj pe-va"></i>
-                            <h3>BOGA</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
+                <h2 class="block_title">Facultad de Arte y Diseño</h2>
+                <div class="container" id="estaciones">
+                    <div class="col-md-3 col-sm-6" id="boga">
+                        <div class="services">
+                            <div class="service-wrap">    
+                                <i class="pe-7s-science pe-dj pe-va"></i>
+                                <h3>BOGA</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
+                            </div>
                         </div>
-                    </div>
 
-                </div>
-                <div class="col-md-3 col-sm-6" id="bauhaus">
-                    <div class="services">
-                        <div class="service-wrap">
-                            <i class="pe-7s-monitor pe-dj pe-va"></i>
-                            <h3>BAUHAUS</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
+                    </div>
+                    <div class="col-md-3 col-sm-6" id="bauhaus">
+                        <div class="services">
+                            <div class="service-wrap">
+                                <i class="pe-7s-monitor pe-dj pe-va"></i>
+                                <h3>BAUHAUS</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-3 col-sm-6" id="jaula">
-                    <div class="services">
-                        <div class="service-wrap">
-                            <i class="pe-7s-edit pe-dj pe-va"></i>
-                            <h3>JAULA</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
+                    <div class="col-md-3 col-sm-6" id="jaula">
+                        <div class="services">
+                            <div class="service-wrap">
+                                <i class="pe-7s-edit pe-dj pe-va"></i>
+                                <h3>JAULA</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-3 col-sm-6" id="pieza">
-                    <div class="services">
-                        <div class="service-wrap">
-                            <i class="pe-7s-config pe-dj pe-va"></i>
-                            <h3>PIEZA GRÁFICA</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
+                    <div class="col-md-3 col-sm-6" id="pieza">
+                        <div class="services">
+                            <div class="service-wrap">
+                                <i class="pe-7s-config pe-dj pe-va"></i>
+                                <h3>PIEZA GRÁFICA</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
             </div>
         </section><!-- services -->
