--- a/estaciones.html
+++ b/estaciones.html
@@ -40,7 +40,7 @@
                              <div class="dropdown-menu">
                                  <div class="arrow-up"></div>
                                  <ul>
-                                     <li><a data-scroll href="https://santi-uriguen.github.io/pagina-feli/">Inicio <i class="pe-7s-home"></i></a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="https://santi-uriguen.github.io/pagina-feli/estaciones">Inicio <i class="pe-7s-home"></i></a><span class="menu-effect"></span></li>
                                      <li><a data-scroll href="#boga">Boga</a><span class="menu-effect"></span></li>
                                      <li><a data-scroll href="#bauhaus">Bauhaus</a><span class="menu-effect"></span></li>
                                      <li><a data-scroll href="#jaula">Jaula</a><span class="menu-effect"></span></li>
