--- a/estaciones.html
+++ b/estaciones.html
@@ -63,7 +63,7 @@
                     <div class="col-md-3 col-sm-6" id="boga">
                         <div class="services">
                             <div class="service-wrap">
-                                <h3>BOGA</h3>
+                                <h3>Boga</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
                             </div>
                         </div>
@@ -71,7 +71,7 @@
                     <div class="col-md-3 col-sm-6" id="bauhaus">
                         <div class="services">
                             <div class="service-wrap">
-                                <h3>BAUHAUS</h3>
+                                <h3>Bauhaus</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
                             </div>
                         </div>
@@ -79,7 +79,7 @@
                     <div class="col-md-3 col-sm-6" id="jaula">
                         <div class="services">
                             <div class="service-wrap">
-                                <h3>JAULA</h3>
+                                <h3>Jaula</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
                             </div>
                         </div>
@@ -87,7 +87,7 @@
                     <div class="col-md-3 col-sm-6" id="pieza">
                         <div class="services">
                             <div class="service-wrap">
-                                <h3>PIEZA GRÁFICA</h3>
+                                <h3>Pieza Gráfica</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
                             </div>
                         </div>
