--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             <div class="container">
                 <h2 class="block_title">FAD</h2>
                 <div class="row">
+                    <button class="accordion">Boga</button>
                     <div class="col-md-3 col-sm-6">
                         <div class="services">
                             <div class="service-wrap">    
@@ -127,6 +128,7 @@
                         </div>
                         
                     </div>
+                    <button class="accordion">Bauhaus</button>
                     <div class="col-md-3 col-sm-6">
                         <div class="services">
                             <div class="service-wrap">
@@ -136,6 +138,7 @@
                             </div>
                         </div>
                     </div>
+                    <button class="accordion">Jaula</button>
                     <div class="col-md-3 col-sm-6">
                         <div class="services">
                             <div class="service-wrap">
@@ -145,6 +148,7 @@
                             </div>
                         </div>
                     </div>
+                    <button class="accordion">Pieza Gráfica</button>
                     <div class="col-md-3 col-sm-6">
                         <div class="services">
                             <div class="service-wrap">
@@ -182,6 +186,21 @@
         <script src="assets/js/smooth-scroll.js"></script>
         <script src="assets/js/owl.carousel.js"></script>
         <script src="assets/js/script.js"></script>
+        <script var acc = document.getElementsByClassName("accordion");
+        var i;
+
+        for (i = 0; i < acc.length; i++) {
+            acc[i].addEventListener("click", function () {
+                this.classList.toggle("active");
+                var panel = this.nextElementSibling;
+                if (panel.style.maxHeight) {
+                    panel.style.maxHeight = null;
+                } else {
+                    panel.style.maxHeight = panel.scrollHeight + "px";
+                }
+            });
+        }
+        </script>
 
     </body>
 </html>
