--- a/index.html
+++ b/index.html
@@ -117,43 +117,30 @@
             <div class="container">
                 <h2 class="block_title">FAD</h2>
                 <div class="row">
-                    <div class="col-md-3 col-sm-6">
-                        <div class="services">
-                            <div class="service-wrap">    
-                                <i class="pe-7s-science pe-dj pe-va"></i>
-                                <a href="https://santi-uriguen.github.io/pagina-feli/estaciones#boga"><h3>BOGA</h3></a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>                                
-                            </div>
-                        </div>
-                        
+                    <button class="accordion">Boga</button>
+                    <div class="panel">
+                        <figure>
+                            <img src="assets/images/alien.jpg" alt"=alien"
+                        </figure>
                     </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="services">
-                            <div class="service-wrap">
-                                <i class="pe-7s-monitor pe-dj pe-va"></i>
-                                <a href="https://santi-uriguen.github.io/pagina-feli/estaciones#bauhaus"><h3>BAUHAUS</h3></a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>                                
-                            </div>
-                        </div>
+                    <button class="accordion">Bauhaus</button>
+                     <div class="panel">
+                        <figure>
+                            <img src="assets/images/alien.jpg" alt"=alien"
+                        </figure>
                     </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="services">
-                            <div class="service-wrap">
-                                <i class="pe-7s-edit pe-dj pe-va"></i>
-                                 <a href="https://santi-uriguen.github.io/pagina-feli/estaciones#jaula"><h3>JAULA</h3></a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
-                            </div>
-                        </div>
+
+                    <button class="accordion">Jaula</button>
+                     <div class="panel">
+                        <figure>
+                            <img src="assets/images/alien.jpg" alt"=alien"
+                        </figure>
                     </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="services">
-                            <div class="service-wrap">
-                                <i class="pe-7s-config pe-dj pe-va"></i>
-                                 <a href="https://santi-uriguen.github.io/pagina-feli/estaciones#pieza"><h3>PIEZA GRÁFICA</h3></a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
-                                
-                            </div>
-                        </div>
+                    <button class="accordion">Pieza gráfica</button>
+                    <div class="panel">
+                        <figure>
+                            <img src="assets/images/alien.jpg" alt"=alien"
+                        </figure>
                     </div>
                 </div>
             </div>
