--- a/index.html
+++ b/index.html
@@ -81,20 +81,19 @@
                 <div class="row port cs-style-3">
                     <div class="col-md-4 col-sm-6 col-xs-12 item-space">
                         <figure>
-                            <img src="assets/images/portfolio1.jpg" alt="img04">
+                            <img src="assets/images/Dani.jpg" alt="img04">
                             <figcaption>
                                 <h3>Dani</h3>
                             </figcaption>
                         </figure>
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12 item-space">
-                        <figure>
-                            <img src="#" alt="#">
-                        </figure>
+                        <p>Acá va una descripción bla bla Lorem ipsum dolor sit amet consectetur adipiscing elit rhoncus accumsan cras vestibulum, dis rutrum felis augue sociosqu tempus primis etiam magnis neque. Sociosqu nibh feugiat molestie libero scelerisque sed facilisis pulvinar, leo dictum et dictumst vitae gravida blandit lectus, erat cubilia condimentum phasellus semper ad natoque. Quam orci congue netus morbi sed viverra id, torquent potenti habitasse erat iaculis pulvinar per gravida, velit convallis curabitur sollicitudin dictum scelerisque.
+                            tempus enim proin facilisi ut conubia ultrices.</p>
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12 item-space">
                         <figure>
-                            <img src="assets/images/portfolio2.jpg" alt="img01">
+                            <img src="assets/images/Feli.jpg" alt="img01">
                             <figcaption>
                                 <h3>Feli</h3>
                             </figcaption>
