--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                                  <div class="arrow-up"></div>
                                  <ul>
                                      <li><a data-scroll href="#body">Inicio <i class="pe-7s-home"></i></a><span class="menu-effect"></span></li>
-                                     <li><a data-scroll href="#portfolio">Portfolio <i class="pe-7s-glasses"></i></a><span class="menu-effect"></span></li>
-                                     <li><a data-scroll href="#services">Proyectos <i class="pe-7s-config"></i></a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="#portfolio">Portfolio </a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="#services">Proyectos </a><span class="menu-effect"></span></li>
                                      
                                  </ul>
                              </div>
