--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <html class="no-js"> <!--<![endif]-->
     <head>
-        <title>Portfolio Felipe</title>
+        <title>Proceso Proyectual</title>
 
         <!-- meta -->
         <meta charset="utf-8">
