--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <link href='http://fonts.googleapis.com/css?family=Dosis:200,300,400,500|Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,100|Titillium+Web:400,200,300italic,300,200italic' rel='stylesheet' type='text/css'>
 
         <script src="assets/js/modernizr.js"></script>
+        
+        <!--pequeña guía: Navigation area: barra flotante.
+                          Portfolio Area: imágenes Feli y Dani, descripción.
+                          Services Area: proyecto con las imágenes. -->
 
     </head>
     <body id="body">
