--- a/index.html
+++ b/index.html
@@ -121,29 +121,29 @@
             <div class="container">
                 <h2 class="block_title">FAD</h2>
                 <div class="row">
-                    <button class="accordion">Boga</button>
+                    <button class="accordion" id="boga"></button>
                     <div class="panel">
                         <figure>
-                            <img src="assets/images/alien.jpg" alt"=alien"
+                            <img src="assets/images/alien.jpg" alt"=alien">
                         </figure>
                     </div>
-                    <button class="accordion">Bauhaus</button>
+                    <button class="accordion" id"bauhaus"></button>
                      <div class="panel">
                         <figure>
-                            <img src="assets/images/alien.jpg" alt"=alien"
+                            <img src="assets/images/alien.jpg" alt"=alien">
                         </figure>
                     </div>
 
-                    <button class="accordion">Jaula</button>
+                    <button class="accordion" id="jaula"></button>
                      <div class="panel">
                         <figure>
-                            <img src="assets/images/alien.jpg" alt"=alien"
+                            <img src="assets/images/alien.jpg" alt"=alien">
                         </figure>
                     </div>
-                    <button class="accordion">Pieza gráfica</button>
+                    <button class="accordion" id="pieza"></button>
                     <div class="panel">
                         <figure>
-                            <img src="assets/images/alien.jpg" alt"=alien"
+                            <img src="assets/images/alien.jpg" alt"=alien">
                         </figure>
                     </div>
                 </div>
