--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             <img src="assets/images/alien.jpg" alt"=alien">
                         </figure>
                     </div>
-                    <button class="accordion" id"bauhaus"></button>
+                    <button class="accordion" id="bauhaus"></button>
                      <div class="panel">
                         <figure>
                             <img src="assets/images/alien.jpg" alt"=alien">
