--- a/index.html
+++ b/index.html
@@ -146,6 +146,12 @@
                             <img src="assets/images/alien.jpg" alt"=alien">
                         </figure>
                     </div>
+                    <button class="accordion" id="otra"></button>
+                     <div class="panel">
+                        <figure>
+                            <img src="assets/images/alien.jpg" alt"=alien">
+                        </figure>
+                    </div>
                 </div>
             </div>
         </section><!-- services -->
