--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                     panel.style.maxHeight = null;
                 } else {
                     panel.style.maxHeight = panel.scrollHeight + "px";
+                    panel.style.maxWidth = panel.scrolWidth + "px";
                 }
             });
         }
