--- a/index.html
+++ b/index.html
@@ -121,36 +121,45 @@
             <div class="container">
                 <h2 class="block_title">FAD</h2>
                 <div class="row">
-                    <button class="accordion" id="boga"></button>
-                    <div class="panel">
-                        <figure>
-                            <img src="assets/images/alien.jpg" alt"=alien">
-                        </figure>
+                    <div>
+                        <button class="accordion" id="boga"></button>
+                        <div class="panel">
+                            <figure>
+                                <img src="assets/images/alien.jpg" alt"=alien">
+                            </figure>
+                        </div>
                     </div>
-                    <button class="accordion" id="bauhaus"></button>
-                     <div class="panel">
-                        <figure>
-                            <img src="assets/images/alien.jpg" alt"=alien">
-                        </figure>
+                    <div>
+                        <button class="accordion" id="bauhaus"></button>
+                        <div class="panel">
+                            <figure>
+                                <img src="assets/images/alien.jpg" alt"=alien">
+                            </figure>
+                        </div>
                     </div>
-
-                    <button class="accordion" id="jaula"></button>
-                     <div class="panel">
-                        <figure>
-                            <img src="assets/images/alien.jpg" alt"=alien">
-                        </figure>
+                    <div>
+                        <button class="accordion" id="jaula"></button>
+                        <div class="panel">
+                            <figure>
+                                <img src="assets/images/alien.jpg" alt"=alien">
+                            </figure>
+                        </div>
                     </div>
-                    <button class="accordion" id="pieza"></button>
-                    <div class="panel">
-                        <figure>
-                            <img src="assets/images/alien.jpg" alt"=alien">
-                        </figure>
+                    <div>
+                        <button class="accordion" id="pieza"></button>
+                        <div class="panel">
+                            <figure>
+                                <img src="assets/images/alien.jpg" alt"=alien">
+                            </figure>
+                        </div>
                     </div>
-                    <button class="accordion" id="otra"></button>
-                     <div class="panel">
-                        <figure>
-                            <img src="assets/images/alien.jpg" alt"=alien">
-                        </figure>
+                    <div>
+                        <button class="accordion" id="otra"></button>
+                        <div class="panel">
+                            <figure>
+                                <img src="assets/images/alien.jpg" alt"=alien">
+                            </figure>
+                        </div>
                     </div>
                 </div>
             </div>
