--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <button class="accordion" id="bauhaus"></button>
                         <div class="panel">
                             <figure>
-                                <img src="assets/images/alien.jpg" alt"=alien">
+                                <img src="assets/images/imagen1.jpg" alt"=alien">
                             </figure>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                         <button class="accordion" id="jaula"></button>
                         <div class="panel">
                             <figure>
-                                <img src="assets/images/alien.jpg" alt"=alien">
+                                <img src="assets/images/imagen1.jpg" alt"=alien">
                             </figure>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                         <button class="accordion" id="pieza"></button>
                         <div class="panel">
                             <figure>
-                                <img src="assets/images/alien.jpg" alt"=alien">
+                                <img src="assets/images/imagen1.jpg" alt"=alien">
                             </figure>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                         <button class="accordion" id="otra"></button>
                         <div class="panel">
                             <figure>
-                                <img src="assets/images/alien.jpg" alt"=alien">
+                                <img src="assets/images/imagen1.jpg" alt"=alien">
                             </figure>
                         </div>
                     </div>
