--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <button class="accordion" id="boga"></button>
                         <div class="panel">
                             <figure>
-                                <img src="assets/images/alien.jpg" alt"=alien">
+                                <img src="assets/images/imagen1.jpg" alt"=alien">
                             </figure>
                         </div>
                     </div>
