--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <link rel="stylesheet" href="assets/css/style-accordeon.css">
 
         <!-- google fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Dosis:200,300,400,500|Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,100|Titillium+Web:400,200,300italic,300,200italic' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=ZCOOL+XiaoWei&display=swap' rel='stylesheet' type='text/css'>
 
         <script src="assets/js/modernizr.js"></script>
         
