--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
         <!-- google fonts -->
         <link href='http://fonts.googleapis.com/css?family=Dosis:200,300,400,500|Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,100|Titillium+Web:400,200,300italic,300,200italic' rel='stylesheet' type='text/css'>
+        
+        <!-- favicon -->
+        <link rel="icon" type="image/png" href="favicon.png" sizes="any">
 
         <script src="assets/js/modernizr.js"></script>
         
