--- a/index.html
+++ b/index.html
@@ -111,20 +111,20 @@
                 </div>
             </div><!-- container -->
         </section><!-- portfolio -->
-        
-        <section id="imagen" class="back">
-            <div class="container">
-                <figure>
-                    <img src="assets/images/bkground.jpg" alt="img-bg">
-                </figure>
-            </div>
-        </section>
+       
 
         <!-- services section -->
 
         <section id="services" class="service-area">
             <div class="container">
-                <h2 class="block_title">FAD</h2>
+                <h2 class="block_title"></h2>
+                <section id="imagen" class="back">
+                    <div class="container">
+                        <figure>
+                            <img src="assets/images/bkground.jpg" alt="img-bg">
+                        </figure>
+                    </div>
+                </section>
                 <div class="row">
                     <div>
                         <button class="accordion" id="boga"></button>
