--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <button class="accordion" id="boga"></button>
                         <div class="panel">
                             <figure>
-                                <img src="assets/images/imagen1.jpg" alt"=alien">
+                                <img src="assets/images/Isla Boga.jpg" alt"=alien">
                             </figure>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                         <button class="accordion" id="bauhaus"></button>
                         <div class="panel">
                             <figure>
-                                <img src="assets/images/imagen1.jpg" alt"=alien">
+                                <img src="assets/images/Isla Bauhaus.jpg" alt"=alien">
                             </figure>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                         <button class="accordion" id="jaula"></button>
                         <div class="panel">
                             <figure>
-                                <img src="assets/images/imagen1.jpg" alt"=alien">
+                                <img src="assets/images/Isla Jaula.jpg" alt"=alien">
                             </figure>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
                         <button class="accordion" id="pieza"></button>
                         <div class="panel">
                             <figure>
-                                <img src="assets/images/imagen1.jpg" alt"=alien">
+                                <img src="assets/images/Isla Pieza.jpg" alt"=alien">
                             </figure>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                         <button class="accordion" id="otra"></button>
                         <div class="panel">
                             <figure>
-                                <img src="assets/images/imagen1.jpg" alt"=alien">
+                                <img src="assets/images/Isla Fad.jpg" alt"=alien">
                             </figure>
                         </div>
                     </div>
