--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <link href="https://fonts.googleapis.com/css?family=ZCOOL+XiaoWei&display=swap" href='http://fonts.googleapis.com/css?family=Dosis:200,300,400,500|Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,100|Titillium+Web:400,200,300italic,300,200italic' rel='stylesheet' type='text/css'>
  
         <!-- favicon -->
-        <link rel="icon" type="image/png" href="favicon.png" sizes="any">
+        <link rel="icon" href="assets/images/favicon.png" type="image/png"  sizes="any">
 
 
         <script src="assets/js/modernizr.js"></script>
