--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <section id="services" class="service-area">
             <div class="container">
-                <h2 class="block_title"></h2>
+                <h2 class="block_title">Facultad</h2>
                 <section id="imagen" class="back">
                     <div class="container">
                         <figure>
