--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html class="no-js"> <!--<![endif]-->
     <head>
 
-        <title>Proceso 1</title>
+        <title>Proceso Proyectual</title>
 
         <!-- meta -->
         <meta charset="utf-8">
