--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <figure>
                             <img src="assets/images/Dani.jpg" alt="img04">
                             <figcaption>
-                                <h3>Dani</h3>
+                                <h3>Daniela Alonso</h3>
                             </figcaption>
                         </figure>
                     </div>
@@ -104,7 +104,7 @@
                         <figure>
                             <img src="assets/images/Feli.jpg" alt="img01">
                             <figcaption>
-                                <h3>Feli</h3>
+                                <h3>Felipe Urigüen</h3>
                             </figcaption>
                         </figure>
                     </div>
