--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
                         <div class="row">
                             <div>
                                 <button class="accordion" id="boga"></button>
-                                <div class="panel">
+                                <div class="panel" id="color">
                                     <figure>
                                         <img src="assets/images/Pagina 3 (Color 1)-01.jpg" alt="color1">
                                     </figure>
                                 </div>
-                                <div class="panel">
+                                <div class="panel" id="color">
                                     <figure>
                                         <img src="assets/images/Pagina 3 (Color 2)-01.jpg" alt="color2">
                                     </figure>
@@ -84,12 +84,12 @@
                             </div>
                             <div>
                                 <button class="accordion" id="jaula"></button>
-                                <div class="panel">
+                                <div class="panel" id="estructura">
                                     <figure>
                                         <img src="assets/images/Pagina 3 (Estructura 1)-01.jpg" alt="estruct1">
                                     </figure>
                                 </div>
-                                <div class="panel">
+                                <div class="panel" id="estructura">
                                     <figure>
                                         <img src="assets/images/Pagina 3 (Estructura 2)-01.jpg" alt="estruct2">
                                     </figure>
@@ -97,12 +97,12 @@
                             </div>
                             <div>
                                 <button class="accordion" id="pieza"></button>
-                                <div class="panel">
+                                <div class="panel" id="simplif">
                                     <figure>
                                         <img src="assets/images/Pagina 3 (Simplificación 1)-01.jpg" alt="simpl1">
                                     </figure>
                                 </div>
-                                <div class="panel">
+                                <div class="panel" id="simplif">
                                     <figure>
                                         <img src="assets/images/Pagina 3 (Simplificación 2)-01.jpg" alt="simpl2">
                                     </figure>
@@ -110,19 +110,19 @@
                             </div>
                             <div>
                                 <button class="accordion" id="bauhaus"></button>
-                                <div class="panel">
+                                <div class="panel" id="trama">
                                     <figure>
                                         <img src="assets/images/Pagina 3 (Trama 1)-01.jpg" alt="trama1">
                                     </figure>
                                 </div>
-                                <div class="panel">
+                                <div class="panel" id="trama">
                                     <figure>
                                         <img src="assets/images/Pagina 3 (Trama 2)-01.jpg" alt="trama2">
                                     </figure>
                                 </div>
                                 <div>
                                 <button class="accordion" id="fad"></button>
-                                <div class="panel">
+                                <div class="panel" id="pag4">
                                     <figure>
                                         <img src="assets/images/Pagina 4-01.jpg" alt="pagina 4">
                                     </figure>
